--- a/mood-track-react/src/App.css
+++ b/mood-track-react/src/App.css
@@ -1,42 +1,31 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+body {
+  margin: 0px;
+  padding: 0px;
+}
+.history {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.emptyButton {
+  height: 50px;
+  width: 200px;
+  border: none;
+  border-radius: 30px;
+  background: linear-gradient(to right, #830101, #eb6060);
+  color: aliceblue;
+  font-size: 1em;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.emptyButton:hover {
+  background: linear-gradient(to right, #eb6060, #830101);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
+.AppContainer {
+  width: 100%;
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+  display: flex;
+  justify-content: space-around;
 }
