--- a/mood-track-react/src/App.css
+++ b/mood-track-react/src/App.css
@@ -1,22 +1,23 @@
 body {
   margin: 0px;
   padding: 0px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .history {
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-around;
 }
 
 .emptyButton {
-  height: 50px;
-  width: 200px;
+  height: 40px;
+  width: 180px;
   border: none;
   border-radius: 30px;
   background: linear-gradient(to right, #830101, #eb6060);
   color: aliceblue;
-  font-size: 1em;
 }
 
 .emptyButton:hover {
@@ -24,8 +25,8 @@ body {
 }
 
 .AppContainer {
-  width: 100%;
-
+  margin-top: 90px;
   display: flex;
   justify-content: space-around;
+  padding: 10px 20px;
 }
