--- a/mood-track-react/src/components/SaveMood.module.css
+++ b/mood-track-react/src/components/SaveMood.module.css
@@ -1,23 +1,25 @@
 .saveButton {
-  height: 50px;
-  width: 200px;
+  height: 40px;
+  width: 180px;
   border: none;
   border-radius: 30px;
-  background: linear-gradient(to right, #187505, #60e05c);
+  background: linear-gradient(to right, #12be99, #02886b);
   color: aliceblue;
-  font-size: 1.1em;
 }
 
 .saveButton:hover {
-  background: linear-gradient(to right, #60e05c, #187505);
+  background: linear-gradient(to right, #02886b, #12be99);
 }
 
 .saveMoodContainer {
-  width: 100%;
-  height: 500px;
-  margin: auto;
+  width: 80%;
+  height: 460px;
+
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  border: 2px solid #02886b;
+  border-radius: 20px;
+  padding: 10px;
 }
