--- a/mood-track-react/src/components/Calendar.module.css
+++ b/mood-track-react/src/components/Calendar.module.css
@@ -1,7 +1,7 @@
 .calendarInput {
   width: 500px;
   height: 50px;
-  border: 2px solid #12be99;
+  border: 2px solid #8ee2d0;
   border-radius: 10px;
   font-size: 1.3em;
 }
